--- a/users.css
+++ b/users.css
@@ -1,391 +1,226 @@
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 body{
-    background-color: #75b79e;
     font-family: 'Poppins', sans-serif;
-  }
-
-  #content_container{
-    background-color:#6C63FF;
-    width: 70%;
-    margin-left: 200px;
-    margin: auto;
-    display:inline-block;
-    padding-bottom:50px;
-    position:absolute;
-    left:55%;
-    transform: translate(-50%, 5%);
-    border-radius: 15px;
-  }
-
-  #finish_task_header{
-    margin:auto;
-    
-    color:white;
-    width:90%;
-    height:70px;
-    font-size:60px;
-    font-family:monospace;
-    text-align:center;
-    border-radius:10px;
-    
-  }
-
-  #task_input_container{
-    background-color:#fff;
-    margin:10px auto;
-    height:120px;
-    width:90%;
-    margin-bottom: 60px;
-    border-radius:10px;
-  }
-
-  #input_box{
-    width:60%;
-    float:left;
-    height:50px;
-    background-color:none;
-    border:none;
-    border-bottom:2px solid #7fcd91;
-    text-align:center;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    border-right:0.2px solid #4d4646;
-    transition: 0.3s;
-  }
-
-  #input_box:focus{
-    border-bottom:4px solid #2c786c;
-    outline:none;
-  }
-
-  #input_date {
-    width:40%;
-    float:left;
-    height:50px;
-    background-color:none;
-    border:none;
-    border-bottom:2px solid #7fcd91;
-    text-align:center;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    padding: 0;
-    transition: 0.3s;
-   }
-
-   #input_date:focus{
-    border-bottom:4px solid #2c786c;
-    outline:none;
-  }
-
-  ::-webkit-datetime-edit-fields-wrapper {
-    background: white; margin-left: 50px;
-  }
-  ::-webkit-datetime-edit-text {
-    color: red; padding: 0 0.3em;
-  }
-  ::-webkit-datetime-edit-month-field {
-    color: black; font-family:monospace;
-  }
-  ::-webkit-datetime-edit-day-field {
-    color: black; font-family:monospace;
-  }
-  ::-webkit-datetime-edit-year-field {
-    color: black; font-family:monospace;
-  }
-  ::-webkit-inner-spin-button {
-    display: none;
-  }
-  ::-webkit-calendar-picker-indicator {
-      opacity: 1;
-      display: block;
-      float: left;
-      margin-right: 50px;
-      color:#fa163f;
-      width: 15.5px;
-      height: 12.5px;
-  }
-
-  #input_button{
-    width:60%;
-    float:left;
-    margin-left:20%;
-    margin-top: 20px;
-    background-color: #fff;
-    height:40px;
-    color:#2c786c;
-    cursor:pointer;
-    outline:none;
-    text-align:center;
-    font-family:monospace;
-    font-size: 17px;
-    text-align: center;
-    border: 2px solid #75b79e;
-    border-radius: 5px;
-  }
-
-  #input_button:hover{
-    background-color: #75b79e;
-    color:white;
-  }
-
-  #input_button:active{
-    transform: translateY(4px);
-  }
-
-  .header{
-    float:left;
-    margin-left: 5%;
-    background-color:#75b79e;
-    color:white;
-    text-align:center;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    padding-top:5px;
-    padding-bottom:5px;
-    padding-left:20px;
-    padding-right:20px;
-    box-shadow: 0px 5px #4d4646;
-  }
-
-  .container{
-    float:left;
-    margin-left: 5%;
-    margin-bottom: 40px;
-    background-color:#f5eaea;
-    width:90%;
-    height:390px;
-    overflow-y:scroll;
-    overflow-x: hidden;
-  }
-
-  .task_container{
-    background-color:#fff;
-    width: 90%;
-    height:110px;
-    margin:0 auto;
-    margin-bottom: 10px;
-    margin-top: 10px;
-  }
-
-  .task_container:hover{
-    box-shadow: -2px 2px #75b79e;
-  }
-
-  #task_data{
-    display: inline-block;
-    float: left;
-    width: 50%;
-    height: 100%;
-    margin-left: 10px;
-  }
-  #task_tool{
-    display: inline-block;
-    float: right;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #task_done_button{
-    float:right;
-    height:30px;
-    width:30px;
-    cursor:pointer;
-    background-color:#fff;
-    border:none;
-    border-radius:20px;
-    outline:none;
-    margin-right: 5px;
-  }
-
-  #task_done_button:hover{
-    background-color:#75b79e;
-    color:white;
-  }
-
-  #task_done_button:active{
-    transform: translateY(4px);
-  }
-
-  #task_edit_button{
-    float:right;
-    height:30px;
-    width:30px;
-    cursor:pointer;
-    background-color:#fff;
-    border:none;
-    border-radius:20px;
-    outline:none;
-    margin-right: 5px;
-  }
-
-  #task_edit_button_editing{
-    float:right;
-    height:30px;
-    width:30px;
-    cursor:pointer;
-    background-color:#ffed83;
-    color: white;
-    border:none;
-    border-radius:20px;
-    outline:none;
-    margin-right: 5px;
-  }
-  #task_edit_button:hover{
-    background-color:#ffed83;
-    color:white;
-  }
-  #task_edit_button:active{
-    transform: translateY(4px);
-  }
-
-  #task_delete_button{
-    float:right;
-    height:30px;
-    width:30px;
-    cursor:pointer;
-    background-color:#fff;
-    border:none;
-    border-radius:20px;
-    outline:none;
-    margin-right: 5px;
-  }
-
-  #task_delete_button:hover{
-    background-color:#fa163f;
-    color:white;
-  }
-
-  #task_delete_button:active{
-    transform: translateY(4px);
-  }
-  .nav-item:hover{
-    cursor: pointer;
-  }
-  #task_title{
-    background-color:#fff;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    width:100%;
-  }
-
-  #title_editing{
-    background-color:#fff;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    float: left;
-    width:100%;
-    border-bottom: 1px solid #ffed83;
-    outline: none;
-  }
-
-  #title_editing:focus{
-    border-bottom: 3px solid #ffed83;
-
-  }
-
-  #task_mail{
-    background-color:#fff;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    width:100%;
-  }
-
-  #mail_editing{
-    background-color:#fff;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    float: left;
-    width:100%;
-    border-bottom: 1px solid #ffed83;
-    outline: none;
-  }
-
-  #mail_editing:focus{
-    border-bottom: 3px solid #ffed83;
-
-  }
+    overflow: hidden;
+}
 
 
+.wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
+}
 
-  #date_editing{
-    background-color:#fff;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
-    float: left;
-    width:100%;
-    border-bottom: 1px solid #ffed83;
-    outline: none;
-  }
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    padding: 0 2rem;
+}
 
-  #date_editing:focus{
-    border-bottom: 3px solid #ffed83;
+.img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
 
-  }
+.login-content{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
 
-  #task_date{
-    background-color:#fff;
-    font-family:monospace;
-    font-weight:bold;
-    font-size:15px;
+.img img{
+	width: 500px;
+}
 
-    width:100%;
-  }
+form{
+	width: 360px;
+}
 
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-  ::-webkit-scrollbar-track {
-     background: #f1f1f1;
-  }
-  ::-webkit-scrollbar-thumb {
-     background: #888;
-  }
-  ::-webkit-scrollbar-thumb:hover {
-     background: #555;
-  }
+.login-content img{
+    height: 100px;
+}
 
-  :root {
-    font-size: 16px;
-    font-family: 'Open Sans';
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-    --transition-speed: 600ms;
-  }
-  
-  body {
-    color: black;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body::-webkit-scrollbar {
-    width: 0.25rem;
-  }
-  
-  body::-webkit-scrollbar-track {
-    background: #1e1e24;
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background: #6649b8;
-  }
-  
-  main {
-    margin-left: 5rem;
-    padding: 1rem;
-  }
+.login-content h2{
+	margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
+}
+
+.login-content .input-div{
+	position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #d9d9d9;
+}
+
+.login-content .input-div.one{
+	margin-top: 0;
+}
+
+.i{
+	color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.i i{
+	transition: .3s;
+}
+
+.input-div > div{
+    position: relative;
+	height: 45px;
+}
+
+.input-div > div > h5{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
+}
+
+.input-div:before, .input-div:after{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: .4s;
+}
+
+.input-div:before{
+	right: 50%;
+}
+
+.input-div:after{
+	left: 50%;
+}
+
+.input-div.focus:before, .input-div.focus:after{
+	width: 50%;
+}
+
+.input-div.focus > div > h5{
+	top: -5px;
+	font-size: 15px;
+}
+
+.input-div.focus > .i > i{
+	color: #38d39f;
+}
+
+.input-div > div > input{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: #555;
+	font-family: 'poppins', sans-serif;
+}
+
+.input-div.pass{
+	margin-bottom: 4px;
+}
+
+a{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+a:hover{
+	color: #38d39f;
+}
+
+.btn{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	font-family: 'Poppins', sans-serif;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+.btn:hover{
+	background-position: right;
+}
+
+
+@media screen and (max-width: 1050px){
+	.container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	form{
+		width: 290px;
+	}
+
+	.login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.img img{
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.container{
+		grid-template-columns: 1fr;
+	}
+
+	.img{
+		display: none;
+	}
+
+	.wave{
+		display: none;
+	}
+
+	.login-content{
+		justify-content: center;
+	}
+}
   
   .navbar {
     position: fixed;
